Fix logo so it doesn’t collide with mobile nav on small screens

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -15,6 +15,7 @@
 
   &__logo {
     display: block;
+    margin-right: 60px;
   }
 
   &__nav {
